Policy engine fixes
