# backend/docs/swagger.json
@@ -453,6 +453,138 @@
                 }
             }
         },
+        "/v1/apps/{id}/policies/{policyId}/versions/{version}/activate": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Activates a policy version",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Policies"
+                ],
+                "summary": "Activate Policy Version",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Application ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Policy ID",
+                        "name": "policyId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Version",
+                        "name": "version",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/apps/{id}/policies/{policyId}/versions/{version}/approve": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Approves a policy version",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Policies"
+                ],
+                "summary": "Approve Policy Version",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Application ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Policy ID",
+                        "name": "policyId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Version",
+                        "name": "version",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/v1/apps/{id}/schemas": {
             "get": {
                 "security": [
@@ -1071,6 +1203,9 @@
         "httpserver.createAppRequest": {
             "type": "object",
             "properties": {
+                "approval_required": {
+                    "type": "boolean"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -1166,6 +1301,9 @@
         "storage.Application": {
             "type": "object",
             "properties": {
+                "approval_required": {
+                    "type": "boolean"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1252,6 +1390,9 @@
                 "active_policy_text": {
                     "type": "string"
                 },
+                "active_status": {
+                    "type": "string"
+                },
                 "active_version": {
                     "type": "integer"
                 },
@@ -1265,6 +1406,9 @@
                     "type": "integer"
                 },
                 "latest_policy_text": {
+                    "type": "string"
+                },
+                "latest_status": {
                     "type": "string"
                 },
                 "latest_version": {
@@ -1292,6 +1436,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "latest_status": {
+                    "type": "string"
                 },
                 "latest_version": {
                     "type": "integer"
